--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ default-run = "interactive"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+fastrand = "2.1.0"
 strum = { version = "0.26.2", features = ["derive"] }
