--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "psce"
 version = "0.1.0"
 edition = "2021"
-default-run = "interactive"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.4", features = ["derive"] }
 fastrand = "2.1.0"
 strum = { version = "0.26.2", features = ["derive"] }
