--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 fastrand = "2.1.0"
+rayon = "1.10.0"
 strum = { version = "0.26.2", features = ["derive"] }
