--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = ["core", "movegen", "perft", "tui", "uci"]
+members = ["core", "movegen", "perft", "search", "tui", "uci"]
