--- a/search/Cargo.toml
+++ b/search/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "tui"
+name = "search"
 version = "0.0.0"
 edition = "2024"
 
 [dependencies]
 core = { path = "../core" }
 movegen = { path = "../movegen" }
-search = { path = "../search" }
+fastrand = "2.3.0"
