--- a/perft/Cargo.toml
+++ b/perft/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.0.0"
 edition = "2024"
 
 [dependencies]
-core = { path = "../core" }
-movegen = { path = "../movegen" }
+psce_core = { path = "../core" }
+psce_movegen = { path = "../movegen" }
